# ksearch

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  config.example.json  docker-compose.yml  pyproject.toml
.claude/skills/: ksearch.md
SKILL/kbase/: SKILL.md
SKILL/ksearch/: SKILL.md
docs/: content-optimization.md  project-architecture.md
docs/specs/: 2026-05-08-hybrid-search-rerank-design.md
src/kb/: __init__.py  __main__.py  cache.py  config.py  models.py  search.py  searxng.py
src/kbase/: __init__.py  __main__.py  cache.py  config.py  embeddings.py  iterative.py  kbase.py  models.py  output.py  search.py  searxng.py
src/ksearch/: __init__.py  __main__.py  cache.py  cli_common.py  cli_kbase.py  cli_optimize.py  cli_search.py  cli_system.py  config.py  content_opt.py  converter.py  debug_logging.py  embeddings.py  iterative.py  iterative_convergence.py  iterative_engine.py  iterative_query.py  iterative_sufficiency.py  kb.py  kbase.py  models.py  search.py  searxng.py
tests/: __init__.py  integration_test.sh  integration_test_report.md  integration_test_v2.sh  integration_test_v3.sh  ollama_e2e_integration.sh  test_bm25_index.py  test_cache.py  test_cli_common.py  test_cli_debug.py  test_cli_optimize.py  test_config.py  test_converter.py  test_debug_logging.py  test_embeddings.py  test_evaluator.py  test_hybrid_query.py  test_iterative.py  test_kb.py  test_kbase.py  test_main.py  test_models.py  test_ollama_client.py  test_ollama_e2e_script.py  test_optimizer.py  test_output.py  test_prompts.py  test_reranker.py  test_search.py  test_searxng.py
(+43 files in other folders)
