[project]
name = "kb"
version = "0.1.0"
description = "Personal knowledge base with web search - CLI tool"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "markitdown>=0.0.1a2",
]

[project.scripts]
kb = "kb.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]