[project]
name = "ksearch"
version = "0.2.0"
description = "Personal knowledge base with web search - CLI tool"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "markitdown>=0.0.1a2",
    "trafilatura>=1.12.2",
    # Optional dependencies for knowledge base
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.7.0"]
ollama = ["ollama>=0.1.0"]
crawl4ai = ["crawl4ai>=0.3.0"]
all = [
    "ksearch[qdrant]",
    "ksearch[ollama]",
    "ksearch[crawl4ai]",
]

[project.scripts]
ksearch = "ksearch.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
